--- a/src/components/experiment-tracking/runs-list/runs-list.scss
+++ b/src/components/experiment-tracking/runs-list/runs-list.scss
@@ -1,3 +1,7 @@
 .runs-list__wrapper {
   overflow-y: scroll;
 }
+
+.runs-list__accordion-header {
+  padding: 0.8em 3em;
+}
